@@ -4,6 +4,7 @@ next:
           - support reading action_menu_items from file/folder
           - Logcache:
             - add logcache_import_filter option
+            - remove orphaned plugin output references on logcacheclean
           - Reports:
             - include any ok event always in availability calculation
 
